[gd_scene load_steps=41 format=2]

[ext_resource path="res://Scenes/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Audio/Music/gert.wav" type="AudioStream" id=2]
[ext_resource path="res://Sprites/BackGrounds/Space/sprMenuBackground.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Menu/Menu/title/sprTitle00.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Menu/Menu/title/sprTitle01.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Menu/Menu/title/sprTitle02.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Menu/Menu/title/sprTitle03.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Menu/Menu/title/sprTitle04.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Menu/Menu/title/sprTitle05.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Menu/Menu/title/sprTitle06.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Menu/Menu/title/sprTitle07.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Menu/Menu/title/sprTitle08.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Menu/Menu/title/sprTitle09.png" type="Texture" id=13]
[ext_resource path="res://Scenes/Menu/Menu/title/sprTitle10.png" type="Texture" id=14]
[ext_resource path="res://Scenes/Menu/Menu/Bottom/Bottom1.png" type="Texture" id=15]
[ext_resource path="res://Scenes/Menu/Menu/Bottom/Bottom2.png" type="Texture" id=16]
[ext_resource path="res://Scenes/Menu/Menu/Bottom/Bottom0.png" type="Texture" id=17]
[ext_resource path="res://Scenes/Menu/Menu/Bottom/Bottom4.png" type="Texture" id=18]
[ext_resource path="res://Scenes/Menu/Menu/Bottom/Bottom5.png" type="Texture" id=19]
[ext_resource path="res://Scenes/Menu/Menu/Bottom/Bottom3.png" type="Texture" id=20]
[ext_resource path="res://Scenes/Menu/Menu/Bottom/Bottom7.png" type="Texture" id=21]
[ext_resource path="res://Scenes/Menu/Menu/Bottom/Bottom8.png" type="Texture" id=22]
[ext_resource path="res://Scenes/Menu/Menu/Bottom/Bottom6.png" type="Texture" id=23]
[ext_resource path="res://Scenes/Menu/Menu/loading/sprLoading00.png" type="Texture" id=24]
[ext_resource path="res://Scenes/Menu/Menu/loading/sprLoading01.png" type="Texture" id=25]
[ext_resource path="res://Scenes/Menu/Menu/loading/sprLoading02.png" type="Texture" id=26]
[ext_resource path="res://Scenes/Menu/Menu/loading/sprLoading03.png" type="Texture" id=27]
[ext_resource path="res://Scenes/Menu/Menu/loading/sprLoading04.png" type="Texture" id=28]
[ext_resource path="res://Scenes/Menu/Menu/loading/sprLoading05.png" type="Texture" id=29]
[ext_resource path="res://Scenes/Menu/Menu/loading/sprLoading06.png" type="Texture" id=30]
[ext_resource path="res://Scenes/Menu/Menu/loading/sprLoading07.png" type="Texture" id=31]
[ext_resource path="res://Scenes/Menu/Menu/loading/sprLoading08.png" type="Texture" id=32]
[ext_resource path="res://Scenes/Menu/Menu/loading/sprLoading09.png" type="Texture" id=33]
[ext_resource path="res://Scenes/Menu/Menu/loading/sprLoading10.png" type="Texture" id=34]
[ext_resource path="res://Scenes/Menu/Menu/loading/sprLoading11.png" type="Texture" id=35]
[ext_resource path="res://Scenes/Menu/Menu/loading/sprLoading12.png" type="Texture" id=36]
[ext_resource path="res://Scenes/Menu/Menu/loading/sprLoading13.png" type="Texture" id=37]

[sub_resource type="Animation" id=1]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AncientBridge:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0, -80.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AnimatedSprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "Title",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "Loading",
"speed": 10.0
} ]

[node name="Menu" type="Node"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="Anim" type="AnimationPlayer" parent="."]
anims/play = SubResource( 1 )

[node name="AncientBridge" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
pitch_scale = 0.9
mix_target = 1

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="Control"]
margin_right = 426.0
margin_bottom = 240.0
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 43.5
margin_right = 40.0
margin_bottom = 96.5
rect_pivot_offset = Vector2( 40, 27 )

[node name="Title" type="AnimatedSprite" parent="Control/VBoxContainer"]
position = Vector2( 33, -83 )
frames = SubResource( 2 )
animation = "Title"

[node name="Play" type="TextureButton" parent="Control/VBoxContainer"]
margin_right = 80.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 40, 8 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 17 )

[node name="Settings" type="TextureButton" parent="Control/VBoxContainer"]
margin_top = 19.0
margin_right = 80.0
margin_bottom = 34.0
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 20 )

[node name="Exit" type="TextureButton" parent="Control/VBoxContainer"]
margin_top = 38.0
margin_right = 80.0
margin_bottom = 53.0
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 23 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 354, 186 )
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
animation = "Loading"
frame = 4
[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]
[connection signal="finished" from="AncientBridge" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="button_down" from="Control/VBoxContainer/Play" to="." method="_on_Play_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/Settings" to="." method="_on_Settings_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/Exit" to="." method="_on_Exit_button_down"]
